[tool.poetry]
name = "spacehop"
version = "0.1.0"
description = ""
authors = ["jadevogt <me@jadev.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
pylint-django = "^2.5.3"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"
mypy = "^0.971"

[tool.pylint]
indent-string = '	'
load-plugins = [
	"pylint_django"
]
django-settings-module = "spacehop.settings"

[tool.mypy]
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"